--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Alex Weaver</h1>
+        <h2>Sophmore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a Sophmore at Bob Jones University double majoring Criminal Justice and  
+            Biblical Counseling. I work for HVAC as a student worker.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
+            I attend Agnew Road Baptist Church in Greenville SC. I have a mobile-friendly 
             sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
             schedules for several churches.
          </p> 
