--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@ h3 {
          <p>I am a Sophmore at Bob Jones University double majoring Criminal Justice and  
             Biblical Counseling. I work for HVAC as a student worker.</p>
          <p>
-            I attend Agnew Road Baptist Church in Greenville SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I attend Agnew Road Baptist Church in Greenville SC. 
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music and writing.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Criminal Justice
+        Biblical Counseling<br />
         Bob Jones University
     </div>
            
