--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h3 {
             I enjoy listening to music and writing.
          </p>
         <h3>EDUCATION</h3>
-        Criminal Justice
+        Criminal Justice<br />
         Biblical Counseling<br />
         Bob Jones University
     </div>
