--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: blue;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: white;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -30,13 +30,14 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Alex Weaver</h1>
+        <h1>Alexandra (Alex) Weaver</h1>
         <h2>Sophmore in Greenville, South Carolina</h2>
         
          <p>I am a Sophmore at Bob Jones University double majoring Criminal Justice and  
             Biblical Counseling. I work for HVAC as a student worker.</p>
          <p>
-            I attend Agnew Road Baptist Church in Greenville SC. 
+            I attend Agnew Road Baptist Church in Greenville SC and Crossroads Baptist<br />
+             Church in Fredericksburg VA.<br />
          </p> 
          <p>
             I enjoy listening to music and writing.
