--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h3 {
          <p>I am a Sophmore at Bob Jones University double majoring Criminal Justice and  
             Biblical Counseling. I work for HVAC as a student worker.</p>
          <p>
-            I attend Agnew Road Baptist Church in Greenville SC and Crossroads Baptist<br />
+            I attend Agnew Road Baptist Church in Greenville SC and Crossroads Baptist
              Church in Fredericksburg VA.<br />
          </p> 
          <p>
